--- a/SourceCodes/RSS/RssSchema.1.0/RssSchema.1.0.csproj
+++ b/SourceCodes/RSS/RssSchema.1.0/RssSchema.1.0.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C06883C7-B136-47F6-9FD5-D0794B6E48F5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Aliencube.FeedSchemata.Rdf.SiteSummary10</RootNamespace>
-    <AssemblyName>Aliencube.FeedSchemata.Rdf.SiteSummary10</AssemblyName>
+    <RootNamespace>Aliencube.FeedSchemata.Rss.Rss10</RootNamespace>
+    <AssemblyName>Aliencube.FeedSchemata.Rss.Rss10</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
