--- a/SourceCodes/RSS/RssSchema.2.0/RssSchema.2.0.csproj
+++ b/SourceCodes/RSS/RssSchema.2.0/RssSchema.2.0.csproj
@@ -43,6 +43,9 @@
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="rss.cs">
+      <DependentUpon>rss.xsd</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="rss.xsd">
@@ -50,6 +53,25 @@
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>
+xcopy "$(TargetDir)*.cs" "$(ProjectDir)" /y
+
+del "$(TargetDir)*.xsd"
+del "$(TargetDir)*.cs" 
+</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>
+xcopy "$(ProjectDir)*.xsd" "$(SolutionDir)..\Libraries\Schemata\" /y
+xcopy "$(ProjectDir)*.xsd" "$(TargetDir)" /y
+
+for /f "delims=" %25%25a in ('dir *.xsd /b /s') do (
+    "$(SolutionDir)..\Documents\Scripts\compile.cmd" %25%25~nxa Rss
+    xcopy %25%25~na.cs "$(SolutionDir)..\Libraries\Converted\" /y
+)
+</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
