--- a/SourceCodes/RSS/RssSchema.1.0/RssSchema.1.0.csproj
+++ b/SourceCodes/RSS/RssSchema.1.0/RssSchema.1.0.csproj
@@ -71,7 +71,7 @@ xcopy "$(ProjectDir)*.xsd" "$(SolutionDir)..\Libraries\Schemata\" /y
 xcopy "$(ProjectDir)*.xsd" "$(TargetDir)" /y
 
 for /f "delims=" %25%25a in ('dir *.xsd /b /s') do (
-    "$(SolutionDir)..\Documents\Scripts\compile.cmd" %25%25~nxa %25%25~na
+    "$(SolutionDir)..\Documents\Scripts\generate.cmd" %25%25~nxa %25%25~na
     xcopy %25%25~na.cs "$(SolutionDir)..\Libraries\Converted\" /y
 )
 </PreBuildEvent>
