Added an extension schema for ATOM Threading Extension.

--- a/SourceCodes/Extensions/ExtensionSchemata/ExtensionSchemata.csproj
+++ b/SourceCodes/Extensions/ExtensionSchemata/ExtensionSchemata.csproj
@@ -48,6 +48,9 @@
     <None Include="CommentApi.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="AtomThreading.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
